--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.28.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "reactjs-popup": "^2.0.6"
   },
   "scripts": {
     "start": "react-scripts start",
