Introduced Account API Endpoint, and Included Register Functionality

--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "crypto": "^1.0.1",
+    "crypto-browserify": "^3.12.1",
     "leaflet": "^1.9.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
