--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^6.28.1",
-    "react-scripts": "5.0.1",
-    "reactjs-popup": "^2.0.6"
+    "react-scripts": "^5.0.1",
+    "reactjs-popup": "^2.0.6",
+    "web-vitals": "^4.2.4"
   },
   "scripts": {
     "start": "react-scripts start",
